--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,8 @@
     --color-06: #B3B2B7;
     --color-07: #1e1e26;
     --color-08: #3CDDF3;
+    --color-09: #8B48BF4D;
+
     --margin-main: 0 100px;
 }
 
@@ -167,8 +169,7 @@ main .company-items li>div {
 main .employee-list {
     text-align: center;
     background-color: var(--color-02);
-    padding-bottom: 100px;
-    margin-bottom: 100px;
+    padding-bottom: 200px;
 }
 
 main .employee-list h2 {
@@ -229,6 +230,7 @@ footer .footer-info {
     margin: var(--margin-main);
     justify-content: space-between;
     height: 225px;
+    background-color: var(--color-01);
 }
 
 footer .footer-info>div:first-child {
@@ -246,8 +248,8 @@ footer .footer-links {
     display: flex;
     background-color: var(--color-07);
     padding: var(--margin-main);
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 60px;
+    padding-bottom: 70px;
 }
 
 footer .footer-links>div,
@@ -285,6 +287,8 @@ footer .footer-links .footer-nav a {
 footer .footer-links .searching-box {
     text-align: right;
     white-space: nowrap;
+    display: flex;
+    flex-direction: column;
 }
 
 footer .footer-links .searching-box input {
@@ -293,4 +297,22 @@ footer .footer-links .searching-box input {
     border-radius: 20px;
     padding: 10px;
     margin-right: 5px;
+}
+
+footer .copyright {
+    font-size: 13px;
+    color: var(--color-06);
+    margin-top: auto;
+
+}
+
+
+@media (min-width:440px) {
+    main .diff-section {
+        background-color: var(--color-08);
+    }
+
+    main .employee-list .employee-wrapper .employee h3 {
+        background-color: var(--color-09);
+    }
 }
