--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
     --color-07: #1e1e26;
     --color-08: #3CDDF3;
     --color-09: #8B48BF4D;
-
+    --color-10: rgba(139, 72, 191, 0.3);
     --margin-main: 0 100px;
 }
 
@@ -44,13 +44,8 @@ button {
 }
 
 
-header>div,
-header>nav {
-    display: flex;
-    align-items: center;
-}
-
-header .header-nav {
+header .header-nav,
+header .logo {
     display: flex;
     align-items: center;
 }
@@ -58,16 +53,11 @@ header .header-nav {
 header .header-nav .icon {
     display: block;
     align-items: center;
-
 }
 
-header .header-nav button {
-    padding: 10px;
-    border-radius: 50px;
-    color: var(--color-02);
-    border-style: none;
-    background-color: var(--color-01);
-
+header .desktop_button {
+    display: none;
+    align-items: center;
 
 }
 
@@ -88,15 +78,16 @@ header .header-nav a:hover {
 
 main .slider-container {
     display: flex;
-    align-items: center;
     margin: var(--margin-main);
     margin-bottom: 95px;
     justify-content: space-between;
     text-align: right;
+    flex-direction: column;
 }
 
+
 main .slider-container>div {
-    justify-content: space-between;
+    flex-direction: row;
 }
 
 main .slider-container>div:first-child {
@@ -104,7 +95,6 @@ main .slider-container>div:first-child {
 }
 
 main .slider-container div button {
-    margin-left: 800px;
     text-align: center;
 }
 
@@ -126,26 +116,15 @@ main .diff-section {
     color: var(--color-02);
     padding: var(--margin-main);
     margin-bottom: 50px;
+    flex-direction: column;
 }
 
-main .diff-section h2 {
-    font-size: 36px;
-}
+
 
 main .diff-section>div {
     flex: 1 1 0;
     margin: 25px;
     text-align: left;
-}
-
-
-main .company-items ol {
-    counter-reset: item;
-    list-style: none;
-    display: flex;
-    justify-content: space-around;
-    padding: 0;
-    flex-wrap: wrap;
 }
 
 main .company-items li::before {
@@ -158,16 +137,32 @@ main .company-items li::before {
     margin-right: 20px;
 }
 
+
+main .company-items ol {
+    counter-reset: item;
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+    padding: 0;
+    flex-wrap: wrap;
+}
+
+
 main .company-items li {
     margin: 10px;
     max-width: 420px;
 }
 
-main .company-items li h3 {
+main .company-items ol li h3 {
     display: inline-block;
-    color: var(--color-04);
     font-weight: bold;
     font-size: 18px;
+    border-radius: 50px 0 0 50px;
+    background-color: var(--color-10);
+    align-self: stretch;
+    flex-direction: row;
+    display: flex;
+    align-items: center;
 }
 
 main .company-items li>div {
@@ -195,8 +190,8 @@ main .employee-list .employee-wrapper {
     margin: var(--margin-main);
     background-color: var(--color-03);
     margin-bottom: 40px;
-    height: 250px;
-
+    min-height: 250px;
+    flex-direction: column;
 }
 
 main .employee-list button {
@@ -318,10 +313,6 @@ footer .copyright {
 
 /* Versión Desktop */
 @media (min-width:1000px) {
-    main .diff-section {
-        background-color: var(--color-01);
-    }
-
     header .header-nav .icon {
         display: none;
     }
@@ -329,4 +320,26 @@ footer .copyright {
     header .header-nav .menu {
         display: block;
     }
+
+    header .desktop_button {
+        display: flex;
+    }
+
+    main .slider-container {
+        flex-direction: row;
+    }
+
+    main .diff-section {
+        background-color: var(--color-01);
+    }
+
+    main .employee-list .employee-wrapper {
+        margin: var(--margin-main);
+        background-color: var(--color-03);
+        margin-bottom: 40px;
+        min-height: 250px;
+        flex-direction: row;
+
+    }
+
 }
