--- a/css/styles.css
+++ b/css/styles.css
@@ -151,18 +151,16 @@ main .company-items ol {
 main .company-items li {
     margin: 10px;
     max-width: 420px;
+    margin-left: auto;
 }
 
 main .company-items ol li h3 {
-    display: inline-block;
-    font-weight: bold;
+    display: block;
     font-size: 18px;
-    border-radius: 50px 0 0 50px;
     background-color: var(--color-10);
-    align-self: stretch;
-    flex-direction: row;
-    display: flex;
-    align-items: center;
+    margin-top: -30px;
+    padding: 8px 0 8px 80px;
+    margin-left: 30px;
 }
 
 main .company-items li>div {
